[package]
name = "payments_engine"
version = "0.1.0"
edition = "2021"

[dependencies]
csv = "1.1"
serde = { version = "1.0", features = ["derive"] }
rust_decimal = "1.30"
rust_decimal_macros = "1.30"
clap = { version = "4.0", features = ["derive"] }
log = "0.4"
env_logger = "0.10"
thiserror = "1.0"

[dev-dependencies]
rstest = "0.17"
assert_cmd = "2.0"
predicates = "2.1"
